--- a/service-registry.properties
+++ b/service-registry.properties
@@ -1,9 +1,5 @@
 server.port= 9102
-
 spring.application.name=service-registry
-
-eureka.client.registerWithEureka=false
-
-eureka.client.fetchRegistry=false
-
-spring.cloud.config.import-check.enabled=false
+eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
+eureka.client.registerWithEureka:false
+eureka.client.fetchRegistry:false
