--- a/service-registry.properties
+++ b/service-registry.properties
@@ -1,5 +1,6 @@
-server.port= 9102
+server.port=9102
 spring.application.name=service-registry
-eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
-eureka.client.registerWithEureka:false
-eureka.client.fetchRegistry:false
+
+eureka.client.service-url.defaultZone=http://localhost:9102/eureka/
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
