--- a/microservice-registry.properties
+++ b/microservice-registry.properties
@@ -1,5 +1,5 @@
 server.port=9102
-spring.application.name=service-registry
+spring.application.name=microservice-registry
 
 eureka.client.service-url.defaultZone=http://localhost:9102/eureka/
 eureka.client.register-with-eureka=false
