mise a jour du fichier de configuration de microservice registry

--- a/microservice-registry.properties
+++ b/microservice-registry.properties
@@ -1,6 +1,14 @@
 server.port=9102
 spring.application.name=microservice-registry
 
-eureka.client.service-url.defaultZone=http://localhost:9102/eureka/
+# =========================
+# EUREKA SERVER CONFIG
+# =========================
+
+# ? Désactivation TOTALE du Eureka Client
+eureka.client.enabled=false
+spring.cloud.discovery.enabled=false
+
+# (optionnel, mais propre)
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
