--- a/microservice-registry.properties
+++ b/microservice-registry.properties
@@ -1,14 +1,5 @@
-server.port=9102
 spring.application.name=microservice-registry
 
-# =========================
-# EUREKA SERVER CONFIG
-# =========================
-
-# ? Désactivation TOTALE du Eureka Client
-eureka.client.enabled=false
-spring.cloud.discovery.enabled=false
-
-# (optionnel, mais propre)
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+server.port=9102
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
