--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.ddl-auto=none
 #Nos configurations
 mes-configs.limitDeProduits= 7
 
+#Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
